# chnots

./: .gitignore  Makefile  README.md
config/: config.example.toml
docs/: 2412-11-chnot-crud.plantuml  2501-30-backup-logic.dot  log.md  test.http
playground/: 2409-19-nest-chnot-insertion.py
playground/rest/: httpx-2501-08-add-chnot.sh  httpx-2501-08-chnot-query.sh
server/: Cargo.toml
server/src/: app.rs  arguments.rs  config.rs  magics.rs  main.rs
server/src/app/: mod.rs  v1.rs
server/src/backup/: mod.rs
server/src/controller/: asset.rs  mod.rs  v1.rs
server/src/controller/v1/: chnot.rs  mod.rs
server/src/db/: mod.rs  postgres.rs
server/src/mapper/: mappertype.rs  mod.rs  postgres.rs
server/src/mapper/backup/: filebackup.rs  filedump.rs  mod.rs  tabledumper.rs  tabledumpersql.rs
server/src/mapper/db/: backup.rs  chnot.rs  kv.rs  llmchat.rs  mod.rs  namespace.rs  resource.rs
server/src/mapper/dump/: filedump.rs  mod.rs  tabledumpsql.rs
server/src/mapper/postgres/: backup.rs  chnot.rs  kv.rs  llmchat.rs  mod.rs  namespace.rs  resource.rs
server/src/mapper/sqlite/: mod.rs  sqltype.rs
server/src/model/: chnot.rs  dto.rs  mod.rs  score.rs  shared_str.rs  todo.rs  toent.rs
server/src/model/db/: chnot.rs  kv.rs  llmchat.rs  mod.rs  namespace.rs  resource.rs
server/src/model/dto/: chnot.rs  kv.rs  llmchat.rs  mod.rs
server/src/model/v1/: convert.rs  domains.rs  dto.rs  mod.rs
server/src/model/v1/db/: chnot.rs  domain.rs  llmchat.rs  mod.rs  resource.rs
server/src/server/: mod.rs
server/src/server/controller/: asset.rs  mod.rs
server/src/server/controller/v1/: chnot.rs  kv.rs  llmchat.rs  mod.rs  resource.rs  toent.rs
server/src/toent/: eventenum.rs  mod.rs  todoevent.rs
server/src/toent/timeevent/: mod.rs
server/src/toent/timeevent/repeater/: endconditon.rs  interval.rs  mod.rs
server/src/toent/timeevent/timeenum/: base.rs  chinese.rs  mod.rs  westen.rs
server/src/util/: mod.rs  pg_util.rs  sort_util.rs  sql_builder.rs  web_util.rs
server/src/utils/: mod.rs  pg_param_builder.rs  pg_utils.rs  sort_util.rs  sql_param_builder.rs
web/: .env.devel  .env.development  .env.prod  .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  postcss.config.js  rsbuild.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  app.tsx  main.tsx  model.ts  model.tsx  router.tsx
web/src/common/component/: codemirror-md-editor.tsx  kbutton.tsx  klistitem.tsx  namespace-select.tsx  navigation.tsx  relative-time.tsx  search-navigation.tsx  svg.tsx
web/src/common/pages/: loading-page.tsx  toent-page.tsx  under-construction-page.tsx
web/src/components/: ChnotActionMenu.tsx  DebounceInput.tsx  DomainAvatar.tsx  DomainBanner.tsx  DomainSelect.tsx  Navigation.tsx  SearchNavigation.tsx  SearchPanel.tsx  UserBanner.tsx  add-button.tsx  debounce-input.tsx  icon.tsx  namespace-select.tsx  navigation.tsx  search-panel.tsx
web/src/components/ChnotEditor/: MarkdownChnot.tsx  UiwMdEditor.tsx
web/src/components/ChnotElem/: MarkdownChnot.tsx  index.tsx
web/src/components/ChnotList/: index.tsx
web/src/components/ChnotMarkdown/: Editor.tsx  Viewer.tsx
web/src/components/ChnotRing/: index.tsx
web/src/components/ChnotView/: ChnotComments.tsx  DomainSelect.tsx  MarkdownChnot.tsx  index.tsx
web/src/components/chnot/: chnot-list-item.tsx  chnot-list.tsx  chnot-markdown-editor.tsx  chnot-markdown-viewer.tsx  chnot-search.tsx
web/src/components/llmchat/: bot-select.component.tsx  record-content.component.tsx  record.component.tsx  response-record.component.tsx  session-input.component.tsx  session-list-item.component.tsx  session-list.component.tsx  (+3 more)
web/src/container/: kbutton.tsx
web/src/helpers/: axios-date-transformer.ts  data-agent.ts  request.ts
web/src/hooks/: use-current-namespace.ts  use-debounce.ts  use-debug-changed.ts  use-llm-response.ts  use-llm-response.tsx  use-param-state.ts  useCurrentDomain.ts  useCurrentUser.ts  useNavigateTo.ts
web/src/layouts/: RootLayout.tsx
web/src/pages/: Chnots.tsx  UnderConstruction.tsx  chnot-page.tsx  llm-chat-page.tsx  llmchat-page.tsx  loading-page.tsx  not-found-page.tsx  settings-page.tsx  under-construction-page.tsx
web/src/router/: index.tsx
web/src/store/: attachment.ts  chnot.ts  common.ts  llmchat.ts  namespace.ts
web/src/styles/: global.css  tailwind.css
web/src/utils/: axios-date-transformer.ts  date-formater.ts  date-utils.ts  debounce.ts  i18n.ts  map-utils.ts  markdown-utils.ts  request.ts  svg-utils.ts  turndown.ts
(+40 files in other folders)
