[package]
name = "chnots"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

axum = { version = "0.7", features = ["multipart"] }

clap = { version = "4.4.10", features = ["derive"] }

tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = "0.7.10"
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }

chin-tools = { git = "https://github.com/aeghn/chin-tools" }
toml = "0.8.10"
once_cell = "1.19.0"

tower-http = { version = "0.5.2", features = [
    "cors",
    "trace",
    "set-header",
    "compression-full",
] }
chrono = { version = "*" }
reqwest = { version = "0.12.5", features = ["json"] }


regex = "1.10.4"

futures = "0.3.30"
rust-embed = { version = "^8.3.0", features = ["axum"] }
mime_guess = { version = "2" }
