[package]
name = "chnots"
version = "0.1.0"
edition = "2021"

[dependencies]

## Logger
tracing = "0.1"
tracing-subscriber = "0.3"


## Web Server
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5.2", features = [
    "cors",
    "trace",
    "set-header",
    "compression-full",
] }

mime_guess = { version = "2" }

# to embed frontend into the server
rust-embed = { version = "^8.3.0", features = ["axum"] }
bytes = { version = "1.5", optional = true }


## Async Runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = "0.7.10"
futures = "0.3.30"


## serde
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }


## Config or Arguments
toml = "0.8.10"
clap = { version = "4.4.10", features = ["derive"] }

## Time handler
chrono = { version = "*" }

# Db
## Postgres
tokio-postgres = { version = "0.7", optional = true, features = [
    "with-chrono-0_4",
] }
postgres-types = { version = "0.2", optional = true }
deadpool-postgres = { version = "0.13.1", optional = true }
serde-pgrow = { version = "0.3.6", optional = true }


# Misc
enum_dispatch = "0.3.13"
num-traits = "0.2"
num-derive = "0.4"

uuid = "*"

distance = "0.4.0"
regex_static = "0.1.1"

# TODO: https://github.com/aeghn/chin-tools
chin-tools = { path = "/home/chin/Projects/chin-tools" }
anyhow = { version = "1.0.86", features = ["backtrace"] }
strum = "0.26.3"
strum_macros = "0.26.4"
debug-ignore = { version = "1.0.5", features = ["serde"] }
regex = "1.10.6"
arc-swap = "1.7.1"
axum-macros = "0.4.1"

[features]
postgres = [
    "tokio-postgres",
    "postgres-types",
    "deadpool-postgres",
    "serde-pgrow",
]
default = ["postgres"]
