[package]
name = "chnots"
version = "0.1.0"
edition = "2021"

[dependencies]

## Logger
tracing = "0.1"
tracing-subscriber = "0.3"


## Web Server
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.6.1", features = [
    "cors",
    "trace",
    "set-header",
    "compression-full",
] }

mime_guess = { version = "2" }

# to embed frontend into the server
rust-embed = { version = "^8.3.0", features = ["axum"] }
bytes = { version = "1", optional = true }


## Async Runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = "0.7.10"
futures = "0.3.30"


## serde
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135" }


## Config or Arguments
toml = "0.8.10"
clap = { version = "4.4.10", features = ["derive"] }

## Time handler
chrono = { version = "0.4.39" }

# Db
## Postgres
tokio-postgres = { version = "0.7", optional = true, features = [
    "with-chrono-0_4",
] }
postgres-types = { version = "0.2", optional = true }
deadpool-postgres = { version = "0.14.0", optional = true }
serde-pgrow = { version = "0.3.6", optional = true }


# Misc
num-traits = "0.2"
num-derive = "0.4"

uuid = "1.11.0"

distance = "0.4.0"
regex_static = "0.1.1"

# TODO: https://github.com/aeghn/chin-tools
chin-tools = { path = "../../chin-tools" }
anyhow = { version = "1", features = ["backtrace"] }
strum = "0.26.3"
strum_macros = "0.26.4"
debug-ignore = { version = "1.0.5", features = ["serde"] }
regex = "1.11.1"
arc-swap = "1.7.1"
axum-macros = "0.5.0"

smol_str = { version = "0.3.2", featuresn = ["serde"]}
tracing-log = "0.2.0"
env_logger = "0.11.6"
axum-server = {version="0.7.1", features=["tls-rustls"]}


[features]
postgres = [
    "tokio-postgres",
    "postgres-types",
    "deadpool-postgres",
    "serde-pgrow",
]
default = ["postgres"]
